--- a/htdocs/lab1/WebLab_1/AboutMe.html
+++ b/htdocs/lab1/WebLab_1/AboutMe.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="aboutme.css" type="text/css" rel="stylesheet" />
         <meta charset="utf-8" />
         <link href="favicon2.gif" type="image/gif" rel="shortcut icon" />
         <title> About woojeong </title>
@@ -117,7 +118,13 @@
         <p> [a cappella] <strong>Disney Medley</strong> <em>by Voice Band (feat. Lee-hee joo)</em></p>
         <a href="http://www.youtube.com/watch?v=lVqNI6qP1ms">youtube link</a>
         <br/><br/>
-        <object data = "acappella.mp3" width="300" height="50"></object>
+
+        <!-- <object data = "acappella.mp3" width="300" height="100"></object> -->
+
+        <audio controls="controls">
+          <source src="acappella.mp3" width="500" height="100" type="audio/mp3"/>
+        </audio>
+
       <hr/>
 
       <br/><br/>
