AboutMe.html fix

--- a/htdocs/lab1/WebLab_1/AboutMe.html
+++ b/htdocs/lab1/WebLab_1/AboutMe.html
@@ -41,7 +41,7 @@
               <li>Stars<br/>- Ben Brutt, Elissa Knight, Jeff Garlin</li>
             </ul>
             </li>
-          <a><br/></a>
+          <br/>
 
           <li>
             <strong>Inception</strong>
@@ -54,7 +54,7 @@
               <li>Stars<br/>- Leonardod DiCaprio, Joseph Gordon-Levitt, Ellen Page</li>
             </ul>
             </li>
-          <a><br/></a>
+          <br/>
 
           <li>
             <strong>About Time</strong>
@@ -101,33 +101,32 @@
 
       <h2> 🎞 Fun Video from Youtube 🎞</h2>
         <p>"Work man" Jang Sung-Kyu</p>
-        <a href="https://www.youtube.com/watch?v=UQYCWLrCUy4">youtube link</a>
-        <br/><br/>
-      <!-- <iframe width="1280" height="720"
-       src="https://www.youtube.com/watch?v=UQYCWLrCUy4">
-      </iframe> -->
+        <!-- <a href="https://www.youtube.com/watch?v=UQYCWLrCUy4">youtube link</a> -->
 
-      <!-- <video src="workman.mp4" width="640" height="360"></video> -->
+        <br/>
+<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/UQYCWLrCUy4" ></iframe> -->
 
-        <object data="workman.mp4" width="640" height="360" type="video/mp4">
+      <video src="workman.mp4"></video>
+<!--
+        <object data="workman.mp4" width="640" height="360" type="video/mp4"> -->
           <!-- <param name="videoplay" value="ture" /> -->
-        </object>
+        <!-- </object> -->
       <hr/>
 
       <h2> 🎧 One of My favorite Songs 🎧</h2>
         <p> [a cappella] <strong>Disney Medley</strong> <em>by Voice Band (feat. Lee-hee joo)</em></p>
         <a href="http://www.youtube.com/watch?v=lVqNI6qP1ms">youtube link</a>
-        <br/><br/>
+        <br/>
 
         <!-- <object data = "acappella.mp3" width="300" height="100"></object> -->
 
         <audio controls="controls">
-          <source src="acappella.mp3" width="500" height="100" type="audio/mp3"/>
+          <source src="acappella.mp3" type="audio/mp3"/>
         </audio>
 
       <hr/>
 
-      <br/><br/>
+      <br/>
       <p>
         <a href="https://validator.w3.org/check/referer">
           <img src="https://selab.hanyang.ac.kr/images/w3c-html.png" alt="HTML Validate"/>
