--- a/Lab_2/AboutMe_css.html
+++ b/Lab_2/AboutMe_css.html
@@ -12,7 +12,7 @@
       <h1>😸 Kim Woo Jeong 😸</h1>
 
       <p>
-        <span class="word">M</span>y name is Kim Woojeong, <em>a Hanyang University at Ansan</em> student.
+        My name is Kim Woojeong, <em>a Hanyang University at Ansan</em> student.
         My major is <strong> Division of Software </strong>.
       </p>
       <hr/>
