--- a/Lab_3/ScottsFav.html
+++ b/Lab_3/ScottsFav.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<div class = "OutLine">
-
 <head>
 
 	<title>Scott's Fav. Things</title>
@@ -20,6 +18,7 @@
 
 <body>
 
+<div class = "OutLine">
 <div class = "TitleBox">
 
 	<h1 id ="MainTitle">Scott's Favorite Things</h1>
@@ -41,7 +40,7 @@
 <div class = "ThreeBox">
 <div class = "FavBox">
 
-	<h2 class = "highlight"><span class = "box2">Cars</span>: 67 Shelby Mustang GT500 Convertible</h2>
+	<h2><span class = "box2">Cars</span>: 67 Shelby Mustang GT500 Convertible</h2>
 	<p>
 		<img src="https://selab.hanyang.ac.kr/courses/cse326/2019/labs/labResources/images/67eleanorConv.jpg" alt="1967 shelby Mustang GT500 Convertible" title="1967 shelby Mustang GT500 Convertible"/ class="FavImage">
 	</p>
@@ -79,6 +78,7 @@
 		Now, it's a bit difficult to spare time and play Bass and, unfortunately, I also had to sell my Bass when I was leaving Paris.
 		But, in 2014, I would like to get a new Bass and play it on my spare time.
 	</p>
+
 </div>
 
 </div> <!-- ThreeBox -->
