--- a/Lab_2/AboutMe_css.html
+++ b/Lab_2/AboutMe_css.html
@@ -113,14 +113,17 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/UQYCWLrCUy4" ></iframe>
         <!--유튜브에서 링크걸어서 바로 가져온거 -->
 
+
         <!-- <video width="320" height="240" controls>
         <source src="./resource/workman.mp4" type="video/mp4">
         </video> -->
-        <!-- video 사용 -->
+        <!-- mp4 파일사용 1 -->
         <!-- <object data="./resource/workman.mp4" width="640" height="360" type="video/mp4"></object> -->
+        <!-- mp4 파일사용 2 -->
+        <!-- <param name="videoplay" value="true" />
+       </object> -->
+  
 
-          <!-- <param name="videoplay" value="ture" /> -->
-        <!-- </object> --><!-- -->
       <hr/>
 
       <h2> 🎧 One of My favorite Songs 🎧</h2>
