--- a/Lab_5/music/music.html
+++ b/Lab_5/music/music.html
@@ -10,19 +10,23 @@
 
 	<body>
 		<h1>My Music Page</h1>
-		
+
 		<!-- Ex 1: Number of Songs (Variables) -->
 		<p>
+			<?php
+			$ song_count = (int)5678;
+
 			I love music.
-			I have 1234 total songs,
-			which is over 123 hours of music!
+			I have $song_count total songs,
+			which is over $song_count hours of music!
+			?>
 		</p>
 
 		<!-- Ex 2: Top Music News (Loops) -->
 		<!-- Ex 3: Query Variable -->
 		<div class="section">
 			<h2>Billboard News</h2>
-		
+
 			<ol>
 			    <li><a href="https://www.billboard.com/archive/article/201910">2019-11</a></li>
 				<li><a href="https://www.billboard.com/archive/article/201910">2019-10</a></li>
@@ -36,14 +40,14 @@
 		<!-- Ex 5: Favorite Artists from a File (Files) -->
 		<div class="section">
 			<h2>My Favorite Artists</h2>
-		
+
 			<ol>
 				<li>Guns N' Roses</li>
 				<li>Green Day</li>
 				<li>Blink182</li>
 			</ol>
 		</div>
-		
+
 		<!-- Ex 6: Music (Multiple Files) -->
 		<!-- Ex 7: MP3 Formatting -->
 		<div class="section">
@@ -53,7 +57,7 @@
 				<li class="mp3item">
 					<a href="lab5/musicPHP/songs/paradise-city.mp3">paradise-city.mp3</a>
 				</li>
-				
+
 				<li class="mp3item">
 					<a href="lab5/musicPHP/songs/basket-case.mp3">basket-case.mp3</a>
 				</li>
